tests/errors/math-error.ice
ICE-1.0.0
sample >= 1.0.0

@app {
    value: 10 % 2.5
}
